<resources>
    <string name="app_name">OceanCompass</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="Search_tour">Search tour</string>
    <string name="shared_tour">shared tour</string>
    <string name="mypage">mypage</string>
    <string name="이메일">이메일</string>
    <string name="비밀번호">비밀번호</string>
    <string name="비밀번호확인">비밀번호 확인</string>
    <string name="이름">이름</string>
    <string name="중복확인">중복확인</string>
    <string name="회원가입">회원가입</string>
    <string name="아이디">아이디</string>
    <string name="로그인">로그인</string>
    <string name="todo">TODO</string>
    <string name="searchtext">여행지찾기</string>
    <string name="addReview">여행지 공유하기</string>
    <string name="addLoca">위치선택</string>
    <string name="select">선택 완료</string>
    <string name="놀거리">놀거리</string>
    <string name="noSearch">검색 결과가 없습니다.</string>
</resources>
