<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            app:showAsAction="ifRoom"
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/title_home" />

    <item
            app:showAsAction="ifRoom"
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/Search_tour" />

    <item
            app:showAsAction="ifRoom"
            android:id="@+id/share"
            android:icon="@drawable/shared"
            android:title="@string/shared_tour" />
    <item
            app:showAsAction="ifRoom"
            android:id="@+id/mypage"
            android:icon="@drawable/mypage"
            android:title="@string/mypage" />

</menu>
