<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_background"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="-5dp">

    <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="94dp"
            android:text="@string/회원가입"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/Id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="245dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/아이디"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/id"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="#88FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#707070"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Id_text" />

    <Button
            android:id="@+id/checkid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="251dp"
            android:text="@string/중복확인"
            app:layout_constraintBottom_toTopOf="@+id/email_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/NameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="259dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/이름"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id" />

    <EditText
            android:id="@+id/name"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="146dp"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#707070"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
            android:id="@+id/EmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="245dp"
            android:background="#00FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/이메일"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_password" />

    <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="231dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/비밀번호"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
            android:id="@+id/password"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="7dp"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#707070"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/passwordText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <TextView
            android:id="@+id/passwordText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="#00FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/비밀번호확인"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
            android:id="@+id/re_password"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="8dp"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#707070"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/EmailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText2" />

    <EditText
            android:id="@+id/email1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="#80FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#707070"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <Spinner
            android:id="@+id/email_select"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="13dp"
            android:background="#00858585"
            android:entries="@array/email_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/email1"
            app:layout_constraintTop_toBottomOf="@+id/checkid" />

    <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="94dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="94dp"
            android:background="#CE535353"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/회원가입"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_select" />

</androidx.constraintlayout.widget.ConstraintLayout>